fix(gallery): horizontal bullets on mobile

--- a/packages/shared/styles/components/SfGallery.scss
+++ b/packages/shared/styles/components/SfGallery.scss
@@ -8,6 +8,8 @@ $gallery__item-margin-bottom: $spacer-medium !default;
 $gallery__item-opacity: 0.5 !default;
 $gallery__item-transition: opacity 0.15s linear !default;
 $gallery__item-mobile-size: 10px !default;
+$gallery__item-mobile-background: $c-gray-secondary !default;
+$gallery__item-mobile--selected-background: $c-accent-primary !default;
 $gallery__stage-width: 400px !default;
 
 .sf-gallery {
@@ -16,61 +18,79 @@ $gallery__stage-width: 400px !default;
   display: flex;
   flex-direction: $gallery-flex-direction;
   position: relative;
+  justify-content: center;
+
   &__thumbs {
-    width: $gallery__nav-width;
+    z-index: 2;
+    position: absolute;
+    width: auto;
+    margin: $gallery__nav-margin 0 0;
     padding: 0;
-    margin: $gallery__nav-margin;
-    @media (max-width: $mobile-max) {
-      z-index: 2;
-      position: absolute;
-      width: auto;
-      margin: 0;
-      padding: 0;
-      left: $spacer-medium;
-      top: 50%;
-      transform: translateY(-50%);
+    top: 100%;
+    display: inline-flex;
+    bottom: 0;
+
+    @media (min-width: $desktop-min) {
+      position: static;
+      display: block;
+      width: $gallery__nav-width;
+      margin: $gallery__nav-margin;
+      left: auto;
+      bottom: auto;
+      overflow-y: auto;
     }
   }
+
   &__item {
-    margin-bottom: $gallery__item-margin-bottom;
     opacity: $gallery__item-opacity;
     transition: $gallery__item-transition;
     cursor: pointer;
     user-select: none;
+
+    &::before {
+      display: block;
+      content: " ";
+      height: $gallery__item-mobile-size;
+      width: $gallery__item-mobile-size;
+      background: $gallery__item-mobile-background;
+      border-radius: 50%;
+      margin: 0 $gallery__item-margin-bottom;
+    }
+
     &--selected {
       cursor: auto;
       opacity: 1;
-    }
-    &:last-of-type {
-      margin-bottom: 0;
-    }
-    @media (max-width: $mobile-max) {
-      opacity: 1;
+
       &::before {
-        display: block;
-        content: " ";
-        height: $gallery__item-mobile-size;
-        width: $gallery__item-mobile-size;
-        background: $c-gray-secondary;
-        border-radius: 50%;
+        background: $gallery__item-mobile--selected-background;
       }
-      &--selected::before {
-        background: $c-accent-primary;
+    }
+
+    @media (min-width: $desktop-min) {
+      margin: 0 0 $gallery__item-margin-bottom;
+
+      &:last-of-type {
+        margin-bottom: 0;
       }
     }
   }
+
   &__stage {
     width: $gallery__stage-width;
     max-width: 100%;
+    overflow: hidden;
   }
+
   &__thumb {
-    display: block;
-    width: 100%;
-    height: auto;
-    @media (max-width: $mobile-max) {
-      display: none;
+    display: none;
+
+    @media (min-width: $desktop-min) {
+      display: block;
+      width: 100%;
+      height: auto;
     }
   }
+
   &__big-image {
     max-width: 100%;
     width: auto;
